--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@ layout: default
 title: Ricardo Tomasi
 ---
 
-<h1>Blog</h1>
+<h2 class="vhidden">Blog</h2>
 <ul class="posts">
 	{% for post in site.posts %}
-		<li><time>{{ post.date | date_to_string }}</time> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+		<li><time>{{ post.date | date_to_string }}</time> <a href="{{ post.url }}">{{ post.title }}</a></li>
 	{% endfor %}
 </ul>
